AOC2020: Day9 Part2